Fix: add hyphen to text of #quote-author Edit: add gap to .quotes .container

--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ a {
 .quotes .container {
     flex-direction: column;
     margin: 4em 30% 4em 30%;
+    gap: 8px;
 }
 
 #quote-author {
